--- a/home.html
+++ b/home.html
@@ -39,10 +39,10 @@
                                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Featured</a>
+                                    <a class="nav-link" href="featured.html">Featured</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">View Post</a>
+                                    <a class="nav-link" href="View.html">View Post</a>
                                 </li>
                             </ul>
 
